examples/httpbin-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin
  namespace: httpbin
spec:
  gateways:
  - istio-system/external-ingressgateway
  - mesh
  hosts:
  - httpbin.sandbox25.gygkube.com
  http:
  - match:
    - uri:
        exact: /headers
      # headers:
      #   authorization:
      #     regex: Basic .+
    route:
    - destination:
        host: httpbin.httpbin.svc.cluster.local
